syntax = "proto3";

package statisticspb;

option go_package = "proto/statisticspb";

service StatisticsService {
    rpc GetUserOrdersStatistics (UserOrderStatisticsRequest) returns (UserOrderStatisticsResponse);
    rpc GetUserStatistics (UserStatisticsRequest) returns (UserStatisticsResponse);
}

message UserOrderStatisticsRequest {
    string user_id = 1;
}

message UserOrderStatisticsResponse {
    string user_id = 1;
    int32 total_orders = 2;
    string most_active_hour = 3;
}

message UserStatisticsRequest {
    string user_id = 1;
}

message UserStatisticsResponse {
    string user_id = 1;
    string registration_date = 2;
    int32 total_orders = 3;
    float average_order_value = 4;
    float total_spent = 5;  
    string peak_hour = 6;    
}